fdo#46480 do not double-escape (e.g. date) literals as strings

Change-Id: I50d3f1002468d41d5b5882de170699d44fe5223c